# py-candlestick-chart

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checks.sh  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yml  tests.yml
examples/: BTC-USD.csv  basic-from-json-file.py  basic_from_csv_file.py  basic_from_json_file.py  basic_from_stdin.sh  custom_renderer_class.py  fetch-from-binance.py  fetch_from_binance.py  integrate-with-rich.py  integrate_with_rich.py
src/candlestick_chart/: __init__.py  __main__.py  candle.py  candle_set.py  chart.py  chart_data.py  chart_renderer.py  colors.py  constants.py  info_bar.py  utils.py  volume_pane.py  y_axis.py
src/tests/: conftest.py  test_candle_set.py  test_chart.py  test_chart_data.py  test_colors.py  test_info_bar.py  test_main.py  test_utils.py  test_y_axis.py
src/tests/data/: BTC-chart.json
