[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candlestick-chart"
description = "Draw candlesticks charts right into your terminal, using Python!"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
  { name = "Mickaël Schoentgen", email="contact@tiger-222.fr" },
]
maintainers = [
  { name = "Mickaël Schoentgen", email="contact@tiger-222.fr" },
]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics :: Viewers",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Terminals",
]
keywords = [
    "candle",
    "candlestick",
    "chart",
    "cli",
    "console",
    "crypto",
    "stock",
    "stock-market",
    "options",
    "terminal",
    "trading",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/py-candlestick-chart"
Changelog = "https://github.com/BoboTiG/py-candlestick-chart/blob/main/CHANGELOG.md"
Source = "https://github.com/BoboTiG/py-candlestick-chart"
Sponsor = "https://github.com/sponsors/BoboTiG"
Tracker = "https://github.com/BoboTiG/py-candlestick-chart/issues"
"Released Versions" = "https://github.com/BoboTiG/py-candlestick-chart/releases"

[project.scripts]
candlestick-chart = "candlestick_chart.__main__:main"

[project.optional-dependencies]
test = [
  "mypy==1.13.0",
  "pytest==8.3.3",
  "pytest-cov==6.0.0",
  "requests==2.32.3",
  "rich==13.9.4",
  "ruff==0.7.2",
  "types-requests",
]
dev = [
  "build==1.2.2.post1",
  "twine==5.1.1",
]

[tool.hatch.version]
path = "src/candlestick_chart/__init__.py"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
only-include = [
  "CHANGELOG.md",
  "examples",
  "src",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/candlestick_chart",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
]

[tool.mypy]
# Ensure we know what we do
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

# Imports management
ignore_missing_imports = true
follow_imports = "skip"

# Ensure full coverage
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

# Restrict dynamic typing (a little)
# e.g. `x: List[Any]` or x: List`
# disallow_any_generics = true

strict_equality = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = """
  --cov=candlestick_chart
  --cov-report=term-missing:skip-covered
  -r fE
  --showlocals
  --strict-markers
  -vvv
"""

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["ALL"]
ignore = [
  "C901",  # complexity
  "COM812",  # conflict
  "D",  # docstrings
  "ISC001",  # conflict
  "PLR2004",  # constant variables
  "RUF001",  # unicode chars
  "RUF003",  # unicode chars
  "S101",  # assert in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
