[metadata]
name = candlestick-chart
version = attr: candlestick_chart.__version__
author = Mickaël 'Tiger-222' Schoentgen
author_email = contact@tiger-222.fr
description = Draw candlesticks charts right into your terminal, using Python!
long_description = file: README.md
url = https://github.com/BoboTiG/py-candlestick-chart
home_page = https://pypi.org/project/py-candlestick-chart
project_urls =
    Documentation = https://github.com/BoboTiG/py-candlestick-chart
    Source = https://github.com/BoboTiG/py-candlestick-chart
    Tracker = https://github.com/BoboTiG/py-candlestick-chart/issues
keywords = candle, candlestick, chart, cli, console, crypto, stock, stock-market, options, terminal, trading
license = LICENSE
license_files =
    LICENSE
platforms = Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11
    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: Terminals

[options]
python_requires = >=3.10
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    candlestick-chart = candlestick_chart.__main__:main

[flake8]
max-line-length = 120
exclude =
    *.egg-info
    .git
    .mypy_cache
    __pytest_cache__
    venv
inline-quotes = double
